deployment/ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kpj-mdm-my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "kpj-mdm-my-prod"
spec:
  tls:
  - hosts:
    - kpj-mdm.pipe.my #guna prototype.com.my untuk prototype
    - kpj-mdm-api.pipe.my

    secretName: kpj-mdm-my-prod

  rules:
  - host: kpj-mdm-api.pipe.my
    http:
      paths:
      - backend:
          serviceName: kpj-mdm-api
          servicePort: 5000    
  - host: kpj-mdm.pipe.my
    http:
      paths:
      - backend:
          serviceName: kpj-mdm-webapp
          servicePort: 80
